samples/_failures_safe/1761510065_eb0c61_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4614eaa4.c: In function ‘main’:
./samples/SAFE/__tmp_4614eaa4.c:165:5: error: expected expression at end of input
  165 |     tokenize(input,
      |     ^~~~~~~~
./samples/SAFE/__tmp_4614eaa4.c:165:5: error: too few arguments to function ‘tokenize’
./samples/SAFE/__tmp_4614eaa4.c:38:6: note: declared here
   38 | void tokenize(const char* input, struct Token* tokens, int* token_count) {
      |      ^~~~~~~~
./samples/SAFE/__tmp_4614eaa4.c:165:5: error: expected declaration or statement at end of input
  165 |     tokenize(input,
      |     ^~~~~~~~
